refactor wallet user association and queries
fixing inp